use script configs instead of a bash script.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,6 @@ rvm:
 cache: bundler
 before_install:
   - gem install bundler
-script: ./ci_build.sh
+script:
+  - bundle exec rspec
+  - bundle exec rubocop
